[gd_scene load_steps=33 format=3 uid="uid://w2jway24bhsk"]

[ext_resource type="Script" path="res://Scenes/Equipment/Cauldron/Cauldron.gd" id="1_r1vq5"]
[ext_resource type="Texture2D" uid="uid://b7k5co3xe0bmj" path="res://Assets/Sprites/cauldron.png" id="2_8v285"]
[ext_resource type="Texture2D" uid="uid://cof8mvwti5vx6" path="res://Assets/Sprites/fire.png" id="3_jyuae"]
[ext_resource type="PackedScene" uid="uid://bxqdllqah4k3u" path="res://Components/DropOff/DropOffComponent.tscn" id="3_nulrp"]
[ext_resource type="Texture2D" uid="uid://bvj14cvrnb6qx" path="res://Assets/Sprites/smoke.png" id="4_d7uq5"]
[ext_resource type="PackedScene" uid="uid://ccfrus2lxbs5j" path="res://Components/TakesIngredients/TakesIngredientsComponent.tscn" id="5_1n2u4"]
[ext_resource type="Texture2D" uid="uid://3ba750fxv8qd" path="res://Assets/Sprites/star.png" id="5_5ui5l"]
[ext_resource type="PackedScene" uid="uid://kp38v1bep0br" path="res://Components/Clickable/ClickableComponent.tscn" id="7_konin"]
[ext_resource type="PackedScene" uid="uid://dq3e1l424jqhp" path="res://Components/Audio/AudioComponent.tscn" id="8_sqoqy"]
[ext_resource type="AudioStream" uid="uid://d24ld0vvspuwo" path="res://Assets/Audio/Cauldron/Bubbles Big Long A.wav" id="9_035no"]
[ext_resource type="AudioStream" uid="uid://nqgwynqbhhvo" path="res://Assets/Audio/Cauldron/water_splash_small_item_01.wav" id="11_s4ifu"]
[ext_resource type="AudioStream" uid="uid://b47iaqlvdpl1w" path="res://Assets/Audio/Cauldron/water_splash_small_item_02.wav" id="12_vah7v"]
[ext_resource type="AudioStream" uid="uid://ceweudjy644kr" path="res://Assets/Audio/Cauldron/water_splash_small_item_03.wav" id="13_11w37"]
[ext_resource type="AudioStream" uid="uid://dgic1qk2m570q" path="res://Assets/Audio/Cauldron/water_splash_small_item_04.wav" id="14_m7r3j"]
[ext_resource type="AudioStream" uid="uid://cwts7odm0qkps" path="res://Assets/Audio/Cauldron/water_splash_small_item_05.wav" id="15_xyjmx"]
[ext_resource type="AudioStream" uid="uid://1nruxubsfljf" path="res://Assets/Audio/Cauldron/Pouring Short D.wav" id="16_wmdxq"]
[ext_resource type="AudioStream" uid="uid://c6qiid4u07igi" path="res://Assets/Audio/Cauldron/Pouring Short E.wav" id="17_tqbif"]
[ext_resource type="AudioStream" uid="uid://ckbhkk38sqqcr" path="res://Assets/Audio/Cauldron/Fire 5 (DPS).mp3" id="18_sb8y5"]
[ext_resource type="PackedScene" uid="uid://c8u7rgo3wcuap" path="res://Components/ZIndex/ZIndexComponent.tscn" id="19_g1ghw"]
[ext_resource type="AudioStream" uid="uid://c477w32xyxrp3" path="res://Assets/Audio/Pickup/Voice Approve 1.mp3" id="19_ki7md"]
[ext_resource type="AudioStream" uid="uid://c18ej5t3j318i" path="res://Assets/Audio/Pickup/Voice Approve 2.mp3" id="20_plqb2"]
[ext_resource type="PackedScene" uid="uid://ct1u42fmqi8je" path="res://Components/Item/ItemComponent.tscn" id="21_4vdmb"]
[ext_resource type="PackedScene" uid="uid://bmqjfcq75klgl" path="res://Components/Pickup/PickUpComponent.tscn" id="21_awl56"]
[ext_resource type="AudioStream" uid="uid://csjpnggyaespi" path="res://Assets/Audio/Pickup/Voice Approve 4.mp3" id="21_gxm03"]
[ext_resource type="AudioStream" uid="uid://olyvpg6sd8ji" path="res://Assets/Audio/Pickup/Voice Approve 5.mp3" id="22_6jmco"]
[ext_resource type="PackedScene" uid="uid://t70hmk4ewtkh" path="res://Components/RecipeTable/RecipeTableComponent.tscn" id="27_gum5e"]
[ext_resource type="Resource" uid="uid://cxsh56hnd636k" path="res://Resources/Potions/TrashPotion.tres" id="28_1mufk"]
[ext_resource type="Resource" uid="uid://61gd8mka2i7m" path="res://Resources/RecipeTables/CaulrdonRecipeTable.tres" id="29_42hxf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0js4n"]
size = Vector2(65, 13)

[sub_resource type="CircleShape2D" id="CircleShape2D_2kc8a"]
radius = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4jbo5"]
size = Vector2(60, 60)

[sub_resource type="CircleShape2D" id="CircleShape2D_n4kpg"]
radius = 20.0

[node name="Cauldron" type="StaticBody2D"]
script = ExtResource("1_r1vq5")
cook_seconds = 10

[node name="CauldronSprite2D" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, -3)
scale = Vector2(0.08, 0.08)
texture = ExtResource("2_8v285")

[node name="FireSprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(2.08165e-12, 15)
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_jyuae")

[node name="SteamSprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(2.08165e-12, -30)
scale = Vector2(0.04, 0.0268359)
texture = ExtResource("4_d7uq5")

[node name="StarSprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(2.08165e-12, -30)
scale = Vector2(0.04, 0.0268359)
texture = ExtResource("5_5ui5l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_0js4n")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TakesIngredientsComponent" parent="." instance=ExtResource("5_1n2u4")]
cauldron = true

[node name="DropOffComponent" parent="." node_paths=PackedStringArray("takes_ingredients_component") instance=ExtResource("3_nulrp")]
position = Vector2(2.08165e-12, 45)
takes_ingredients_component = NodePath("../TakesIngredientsComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropOffComponent"]
shape = SubResource("CircleShape2D_2kc8a")

[node name="ClickableComponent" parent="." instance=ExtResource("7_konin")]
tooltip_text = "Cauldron"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickableComponent"]
shape = SubResource("RectangleShape2D_4jbo5")

[node name="BoilAudioComponent" parent="." instance=ExtResource("8_sqoqy")]
audio_clips = Array[AudioStream]([ExtResource("9_035no")])

[node name="SplashAudioComponent" parent="." instance=ExtResource("8_sqoqy")]
audio_clips = Array[AudioStream]([ExtResource("11_s4ifu"), ExtResource("12_vah7v"), ExtResource("13_11w37"), ExtResource("14_m7r3j"), ExtResource("15_xyjmx")])

[node name="WaterAudioComponent" parent="." instance=ExtResource("8_sqoqy")]
audio_clips = Array[AudioStream]([ExtResource("16_wmdxq"), ExtResource("17_tqbif")])

[node name="FireAudioComponent" parent="." instance=ExtResource("8_sqoqy")]
audio_clips = Array[AudioStream]([ExtResource("18_sb8y5")])

[node name="PickupAudioComponent" parent="." instance=ExtResource("8_sqoqy")]
audio_clips = Array[AudioStream]([ExtResource("19_ki7md"), ExtResource("20_plqb2"), ExtResource("21_gxm03"), ExtResource("22_6jmco")])

[node name="ZIndexComponent" parent="." instance=ExtResource("19_g1ghw")]

[node name="ItemComponent" parent="." instance=ExtResource("21_4vdmb")]

[node name="PickUpComponent" parent="." node_paths=PackedStringArray("item_component") instance=ExtResource("21_awl56")]
position = Vector2(0, 45)
item_component = NodePath("../ItemComponent")
is_swappable = false
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpComponent"]
position = Vector2(2.08165e-12, 2.08165e-12)
shape = SubResource("CircleShape2D_n4kpg")

[node name="RecipeTableComponent" parent="." instance=ExtResource("27_gum5e")]
default = ExtResource("28_1mufk")
recipe_table = ExtResource("29_42hxf")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="drop_off_ingredient_event" from="DropOffComponent" to="." method="_on_drop_off_ingredient_event"]
[connection signal="picked_up_event" from="PickUpComponent" to="." method="_on_picked_up_event"]
